Tag spacing issue fixed and series name font reduced

--- a/sass/character.scss
+++ b/sass/character.scss
@@ -255,7 +255,7 @@ h1, h2, h3, h4, h5, h6, .collapsible-header {
         border-radius: 15px;
         width: 70%;
         .fa {
-          right: 7px;
+          right: 30px;
         }
       }
     }
@@ -376,6 +376,9 @@ h1, h2, h3, h4, h5, h6, .collapsible-header {
     }
     h5 {
       font-size: 1.2em;
+      @include tabmini {
+        font-size: 1em;
+      }
     }
     .series-name {
       background: $text;
